Navbar broken css issue fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,18 +7,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-/* body {
-    font-family: "Urbanist", "Playfair Display", Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-} */
-
-/* .container {
-    max-width: 1400px;
-    margin: 0 auto;
-} */
-
 .btn {
     padding: 10px 20px;
     background: #ceaf83;
@@ -561,156 +549,6 @@ header .login-signup:hover {
 }
 
 /* ----------------------- Review Section ------------------- */
-/* .reviews {
-    display: flex;
-    height: 471px;
-}
-
-.reviews .left {
-    width: 50%;
-    background-color: #1c1b1f;
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-
-.reviews .left .box {
-    position: absolute;
-    right: 0px;
-    padding: 100px 40px;
-    width: 700px;
-}
-
-.reviews .left .box h2 {
-    font-family: Playfair Display;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 56px;
-    color: #fff;
-    margin-bottom: 30px;
-}
-
-.nav-controls {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-}
-
-.nav-button {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    cursor: pointer;
-    background-color: white;
-    color: black;
-}
-.reviews .arrow {
-    padding-bottom: 4px;
-}
-
-.nav-button:hover {
-    background: #ceaf83;
-    color: rgb(255, 255, 255);
-}
-
-.dots {
-    display: flex;
-    gap: 10px;
-}
-
-.dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #d9d9d9;
-}
-
-.dots .active {
-    background: #ceaf83;
-}
-
-.reviews .right {
-    width: 50%;
-    background-color: #fff9f6;
-    padding: 100px 60px;
-}
-
-.testimonial-box {
-    background-color: white;
-    border: 1px solid #cacaca;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 550px;
-    width: 100%;
-    position: relative;
-    border-radius: 20px;
-    padding: 30px;
-}
-
-.testimonial-header {
-    display: flex;
-    align-items: center;
-}
-
-.testimonial-header .profile-pic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
-}
-
-.profile-info {
-    flex-grow: 1;
-}
-
-.name {
-    font-family: Urbanist;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 20px;
-}
-
-.title {
-    font-family: Urbanist;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 20px;
-    color: #4d4d4d;
-}
-
-.quote-icon {
-    position: absolute;
-    top: 30px;
-    right: 50px;
-}
-
-.quote-icon img {
-    width: 20px;
-    height: 20px;
-}
-
-.testimonial-text {
-    font-family: Urbanist;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 30px;
-    color: #4d4d4d;
-    margin: 20px 0;
-}
-
-.rating {
-    display: flex;
-    gap: 5px;
-}
-
-.star {
-    color: #ffc119;
-    font-size: 20px;
-} */
 
 .reviews {
     display: flex;
